--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -6,7 +6,8 @@ before:
     # this is just an example and not a requirement for provider building/publishing
     - go mod tidy
 builds:
-  - env:
+  - main: ./cmd/cyclone
+    env:
       # goreleaser does not work with CGO, it could also complicate
       # usage by users in CI/CD systems like Terraform Cloud where
       # they are unable to install libraries.
