--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -33,9 +33,9 @@ builds:
     binary: '{{ .ProjectName }}'
 archives:
   - format: zip
-    name_template: '{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}'
+    name_template: '{{ .ProjectName }}-{{ .Version }}-{{ .Os }}-{{ .Arch }}'
 checksum:
-  name_template: '{{ .ProjectName }}_{{ .Version }}_SHA256SUMS'
+  name_template: '{{ .ProjectName }}-{{ .Version }}-SHA256SUMS'
   algorithm: sha256
 release:
   # Visit your project's GitHub Releases page to publish this release.
